fixed returned values 3.0
