# internal/app/handlers/application.go
@@ -14,14 +14,14 @@ import (
 // GetChargingApplications godoc
 // @Summary Get charging applications
 // @Description Get list of charging applications with optional filtering
-// @Tags applications
+// @Tags Charging applications
 // @Accept json
 // @Produce json
 // @Param status query string false "Filter by status (draft, formed, completed, rejected)"
-// @Param start_date query string false "Start date for filtering (YYYY-MM-DD)"
-// @Param end_date query string false "End date for filtering (YYYY-MM-DD)"
+// @Param start_date query string false "Start date for filtering"
+// @Param end_date query string false "End date for filtering"
 // @Security BearerAuth
-// @Success 200 {array} domain.ChargingApplication
+// @Success 200 {array} domain.ChargingApplicationResponse
 // @Failure 400 {object} object "Bad request"
 // @Failure 401 {object} object "Unauthorized"
 // @Failure 403 {object} object "Forbidden"
@@ -31,7 +31,17 @@ func (h *ChargingHandler) GetChargingApplications(c *gin.Context) {
 	ctx, cancel := context.WithTimeout(c.Request.Context(), 30*time.Second)
 	defer cancel()
 
-	chargingApplications, err := h.chargingService.GetChargingApplications(ctx,
+	creatorId, err := h.getCurrentUserID(c)
+	if err != nil {
+		h.ErrorHandler(c, err)
+		return
+	}
+	userRole, err := h.getCurrentUserRole(c)
+	if err != nil {
+		h.ErrorHandler(c, err)
+		return
+	}
+	chargingApplications, err := h.chargingService.GetChargingApplications(ctx, creatorId, userRole,
 		c.Query("status"),
 		c.Query("start_date"),
 		c.Query("end_date"))
@@ -51,7 +61,7 @@ func (h *ChargingHandler) GetChargingApplications(c *gin.Context) {
 // GetChargingApplicationById godoc
 // @Summary Get charging application by ID
 // @Description Get specific charging application with its orders
-// @Tags applications
+// @Tags Charging applications
 // @Accept json
 // @Produce json
 // @Param id path int true "Application ID"
@@ -93,11 +103,11 @@ func (h *ChargingHandler) GetChargingApplicationById(c *gin.Context) {
 // GetDraftChargingApplication godoc
 // @Summary Get draft charging application
 // @Description Get current user's draft charging application
-// @Tags applications
+// @Tags Charging applications
 // @Accept json
 // @Produce json
 // @Security BearerAuth
-// @Success 200 {object} domain.ChargingApplication
+// @Success 200 {object} domain.ChargingDraftResponse
 // @Failure 401 {object} object "Unauthorized"
 // @Failure 403 {object} object "Forbidden"
 // @Failure 500 {object} object "Internal server error"
@@ -124,10 +134,10 @@ func (h *ChargingHandler) GetDraftChargingApplication(c *gin.Context) {
 // UpdateChargingApplicationPhone godoc
 // @Summary Update application phone number
 // @Description Update phone number for current user's draft application
-// @Tags applications
+// @Tags Charging applications
 // @Accept json
 // @Produce json
-// @Param request body domain.ApplicationRequest true "Phone number"
+// @Param request body domain.PhoneRequest true "Phone number"
 // @Security BearerAuth
 // @Success 200 {object} object "Phone updated successfully"
 // @Failure 400 {object} object "Bad request"
@@ -158,7 +168,7 @@ func (h *ChargingHandler) UpdateChargingApplicationPhone(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, gin.H{
-		"message":     "phone updated successfully",
+		"message":              "phone updated successfully",
 		"charging_application": chargingApplication.ToResponse(),
 	})
 }
@@ -166,7 +176,7 @@ func (h *ChargingHandler) UpdateChargingApplicationPhone(c *gin.Context) {
 // UpdateChargingApplicationByCreator godoc
 // @Summary Form charging application
 // @Description Form (submit) the draft charging application
-// @Tags applications
+// @Tags Charging applications
 // @Accept json
 // @Produce json
 // @Security BearerAuth
@@ -193,7 +203,7 @@ func (h *ChargingHandler) UpdateChargingApplicationByCreator(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, gin.H{
-		"message":     "application formed successfully",
+		"message":              "application formed successfully",
 		"charging_application": chargingApplication.ToResponse(),
 	})
 }
@@ -201,7 +211,7 @@ func (h *ChargingHandler) UpdateChargingApplicationByCreator(c *gin.Context) {
 // UpdateChargingApplicationByModerator godoc
 // @Summary Update application status by moderator
 // @Description Complete or reject charging application (moderator only)
-// @Tags applications
+// @Tags Charging applications
 // @Accept json
 // @Produce json
 // @Param id path int true "Application ID"
@@ -248,7 +258,7 @@ func (h *ChargingHandler) UpdateChargingApplicationByModerator(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, gin.H{
-		"message":     fmt.Sprintf("application %s successfully", action),
+		"message":              fmt.Sprintf("application %s successfully", action),
 		"charging_application": chargingApplication.ToResponse(),
 	})
 }
@@ -256,7 +266,7 @@ func (h *ChargingHandler) UpdateChargingApplicationByModerator(c *gin.Context) {
 // DeleteChargingApplicationById godoc
 // @Summary Delete charging application
 // @Description Delete current user's draft charging application
-// @Tags applications
+// @Tags Charging applications
 // @Accept json
 // @Produce json
 // @Security BearerAuth
